# info-central-app

./: .gitignore  README.md
.claude/: initial_requirements_doc.md  progress_summary.md  project_plan.md
backend/: .env.example  pyproject.toml
backend/.claude/: ai_dev_loop_design.md
backend/app/: main.py
backend/app/api/: blocks.py
backend/app/core/: config.py
backend/app/models/: block.py
backend/app/services/: ai_service.py  block_service.py  execution_service.py
backend/generated_code/blocks/1/v1/: block_executor.py  execute.py
backend/generated_code/blocks/2/v1/: block_executor.py  execute.py
frontend/: index.html  package.json
frontend/.claude/: progress_summary.md
frontend/src/: App.css  App.tsx
frontend/src/components/: AddBlockDialog.tsx  BlockCard.tsx  Dashboard.tsx
frontend/src/components/ui/: toaster.tsx
frontend/src/types/: index.ts
